JS advanced solves

--- a/JS courses/Advanced/JS Advanced/3- lab Objects and Composition/index.html
+++ b/JS courses/Advanced/JS Advanced/3- lab Objects and Composition/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>FromJSONToHTMLTable</title>
     <style>
-        table,th{
+        table,
+        th {
             border: groove;
             border-collapse: collapse;
         }
-        td{
+
+        td {
             border: 1px solid black;
         }
-        td,th{
+
+        td,
+        th {
             padding: 5px;
         }
     </style>
 </head>
+
 <body>
     <div id="wrapper">
     </div>
     <script src="6-From JSON to HTML Table.js">
-        
        
     </script>
 </body>
+
 </html>
