--- a/JS courses/Advanced/JS Advanced/3- lab Objects and Composition/index.html
+++ b/JS courses/Advanced/JS Advanced/3- lab Objects and Composition/index.html
@@ -25,8 +25,52 @@
 <body>
     <div id="wrapper">
     </div>
-    <script src="6-From JSON to HTML Table.js">
-       
+    <script>
+        function fromJSONToHTMLTable(input) {
+            let arr = JSON.parse(input);
+
+            let outputArr = ['<table>'];
+            outputArr.push(makeKeyRow(arr));
+            arr.forEach((obj) => outputArr.push(makeValueRow(obj)));
+            outputArr.push('</table>');
+
+            return (outputArr.join('\n'));
+
+            function makeKeyRow(arr) {
+                let result = '  <tr>';
+                Object.keys(arr[0]).forEach(key => {
+                    result += `<th>${escapeHtml(key)}</th>`;
+                });
+                result += '</tr>';
+                return result;
+            }
+
+            function makeValueRow(obj) {
+                let result = '  <tr>';
+                Object.values(obj).forEach(value => {
+                    result += `<td>${escapeHtml(value)}</td>`;
+                });
+                result += '</tr>';
+                return result;
+            }
+
+            function escapeHtml(str) {
+                // html escape from Underscore.js https://coderwall.com/p/ostduq/escape-html-with-javascript
+                let entityMap = {
+                    "&": "&amp;",
+                    "<": "&lt;",
+                    ">": "&gt;",
+                    '"': '&quot;',
+                    "'": '&#39;',
+                    "/": '&#x2F;'
+                };
+                return str.toString().replace(/[&<>"'\/]/g, (s) => entityMap[s]);
+            }
+        }
+        window.onload = function () {
+            let container = document.getElementById('wrapper');
+            container.innerHTML = fromJSONToHTMLTable(['[{"Name":"Stamat","Price":5.5},{"Name":"Rumen","Price":6}]']);
+        };
     </script>
 </body>
 
