--- a/JS courses/Advanced/JS Applications/2-Asynchronous Programming/02. JS-Applications-Asynchronous-Programming-Lab-Resources/02.Github-Repos/index.html
+++ b/JS courses/Advanced/JS Applications/2-Asynchronous Programming/02. JS-Applications-Asynchronous-Programming-Lab-Resources/02.Github-Repos/index.html
@@ -11,14 +11,10 @@
 
 <body>
     <label for="username">GitHub username:</label>
-    <input type="text" id="username" value="k1r1L" />
+    <input type="text" id="username" value="" />
     <button onclick="loadRepos()">Load Repos</button>
     <ul id="repos">
-        <li>
-            <a href="{repo.html_url}">
-                {repo.full_name}
-            </a>
-        </li>
+        
     </ul>
 <script src="./scripts/app.js"></script>
 </body>
