--- a/JS courses/Advanced/JS Applications/3.1-exercise Remote Data and Authentication/03. JS-Applications-Data-and-Authentication-Exercise-Resources/03.Students/index.html
+++ b/JS courses/Advanced/JS Applications/3.1-exercise Remote Data and Authentication/03. JS-Applications-Data-and-Authentication-Exercise-Resources/03.Students/index.html
@@ -18,7 +18,10 @@
                     <th>Grade</th>
                 </tr>
             </thead>
-            <tbody></tbody>
+            
+            <tbody>
+                
+            </tbody>
         </table>
         <div class="container-form">
             <h3>FORM</h3>
