--- a/JS courses/ReactJS/demo/first demo/index.html
+++ b/JS courses/ReactJS/demo/first demo/index.html
@@ -5,7 +5,7 @@
         <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
         <link rel="icon" type="image" href="/images/img_drying_3.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Лиофилизация</title>
+        <title>freeze dried</title>
     </head>
     <body>
         <div id="root"></div>
