uploading missing files on google cloud

--- a/ReactJS/ReactJS-Project/client/index.html
+++ b/ReactJS/ReactJS-Project/client/index.html
@@ -22,23 +22,23 @@
     <body>
         <div id="root"></div>
         <script type="module" src="./src/main.jsx"></script>
-        <script src="./src/assets/vendors/jquery/jquery-3.4.1.js"></script>
-        <script src="./src/assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+        <script src="https://firebasestorage.googleapis.com/v0/b/food-hunt-93.appspot.com/o/assets%2Fvendors%2Fjquery%2Fjquery-3.4.1.js?alt=media&token=dda5cd5a-afa1-4828-bd1e-b0be0d0ab8f3"></script>
+        <script src="https://firebasestorage.googleapis.com/v0/b/food-hunt-93.appspot.com/o/assets%2Fvendors%2Fbootstrap%2Fbootstrap.bundle.js?alt=media&token=6addca13-4204-4c2e-ad01-586c281fbcfe"></script>
 
         <!-- bootstrap affix -->
-        <script src="./src/assets/vendors/bootstrap/bootstrap.affix.js"></script>
+        <script src="https://firebasestorage.googleapis.com/v0/b/food-hunt-93.appspot.com/o/assets%2Fvendors%2Fbootstrap%2Fbootstrap.affix.js?alt=media&token=a93ef21e-de93-4757-842b-6bd4f76d3d7b"></script>
 
         <!-- wow.js -->
-        <script src="./src/assets/vendors/wow/wow.js"></script>
+        <script src="https://firebasestorage.googleapis.com/v0/b/food-hunt-93.appspot.com/o/assets%2Fvendors%2Fwow%2Fwow.js?alt=media&token=8b550496-494a-40e7-b290-66c63010b873"></script>
 
         <!-- google maps -->
-        <script
+        <!-- <script
             async
             defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"
-        ></script>
+        ></script> -->
 
         <!-- FoodHut js -->
-        <script src="./src/assets/js/foodhut.js"></script>
+        <script src="https://firebasestorage.googleapis.com/v0/b/food-hunt-93.appspot.com/o/assets%2Fjs%2Ffoodhut.js?alt=media&token=854df92a-950c-455a-aa7d-fe5474f39316"></script>
     </body>
 </html>
