--- a/ReactJS/ReactJS-Project/client/index.html
+++ b/ReactJS/ReactJS-Project/client/index.html
@@ -11,31 +11,28 @@
             href="./vendors/themify-icons/css/themify-icons.css"
         />
 
-        <link
-            rel="stylesheet"
-            href="./vendors/animate/animate.css"
-        />
+        <link rel="stylesheet" href="./vendors/animate/animate.css" />
 
         <!-- Bootstrap + FoodHut main styles -->
         <link rel="stylesheet" href="./css/foodhut.css" />
     </head>
     <body>
         <div id="root"></div>
+        <!-- core  -->
+        <script src="./vendors/jquery/jquery-3.4.1.js"></script>
+        <script src="./vendors/bootstrap/bootstrap.bundle.js"></script>
+
+        <!-- bootstrap affix -->
+        <script src="./vendors/bootstrap/bootstrap.affix.js"></script>
+
+        <!-- wow.js -->
+        <script src="./vendors/wow/wow.js"></script>
+
+        <!-- google maps -->
+        <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"></script> -->
+
+        <!-- FoodHut js -->
+        <script src="./js/foodhut.js"></script>
         <script type="module" src="./src/main.jsx"></script>
-        	<!-- core  -->
-    <script src="./vendors/jquery/jquery-3.4.1.js"></script>
-    <script src="./vendors/bootstrap/bootstrap.bundle.js"></script>
-
-    <!-- bootstrap affix -->
-    <script src="./vendors/bootstrap/bootstrap.affix.js"></script>
-
-    <!-- wow.js -->
-    <script src="./vendors/wow/wow.js"></script>
-    
-    <!-- google maps -->
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"></script> -->
-
-    <!-- FoodHut js -->
-    <script src="./js/foodhut.js"></script>
     </body>
 </html>
